# ChronoChat

./: .gitignore  README.md  start.bat
backend/: .gitignore  CMakeLists.txt  build_cmake.bat  config.json
backend/src/: main.cpp
backend/src/ai/: admin_agent.cpp  admin_agent.h  ai_service.cpp  ai_service.h  api_client.cpp  api_client.h
backend/src/api/: character_controller.cpp  character_controller.h  config_controller.cpp  config_controller.h  group_controller.cpp  group_controller.h  hello_controller.cpp  hello_controller.h
backend/src/config/: config_manager.cpp  config_manager.h
backend/src/models/: character.cpp  character.h
backend/src/services/: ai_service.cpp  ai_service.h  character_service.cpp  character_service.h  group_service.cpp  group_service.h  memory_service.cpp  memory_service.h
backend/src/utils/: file_utils.cpp  file_utils.h
backend/src/ws/: chat_websocket.cpp  chat_websocket.h
frontend/: index.html  package-lock.json  package.json  vite.config.js.timestamp-1784205852382-79d1f1690bffe8.mjs
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/assets/: global.css
frontend/src/components/: StarField.vue
frontend/src/router/: index.js
frontend/src/views/: CharacterChatPage.vue  CharacterCreatePage.vue  CharacterEditPage.vue  CharacterInfoPage.vue  CharacterListPage.vue  GroupChatCreatePage.vue  GroupChatListPage.vue  GroupChatPage.vue  GroupManagePage.vue  HomePage.vue  SettingsPage.vue
tools/: recover_characters.py  requirements.txt
